STERI016-327-section-am: Fix content justification to prevent excessive spacing between elements on large screens (#743)

--- a/blocks/icon-list/icon-list.css
+++ b/blocks/icon-list/icon-list.css
@@ -298,6 +298,13 @@ main .two-column.form-container.icon-list-container > div:first-child.default-co
 
 }
 
+@media (min-width: 1400px) {
+    main .two-column.form-container.icon-list-container:has(.vertical-icons) {
+        justify-content: center;
+        column-gap: 50px;
+    }
+}
+
 /* Vertical Numbers Styles */
 main .section.two-column.icon-list-container:has(.vertical-numbers) div.icon-list > div {
     flex-direction: column;
